--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "playwright-core": "^1.40.0"
+    "puppeteer-core": "^21.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
