--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "puppeteer-core": "^21.5.0",
     "@sparticuz/chromium": "^131.0.0"
   },
+  "optionalDependencies": {
+    "@sparticuz/chromium": "^131.0.0"
+  },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
