--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "puppeteer-core": "^21.5.0",
-    "@sparticuz/chromium": "^131.0.0"
-  },
-  "optionalDependencies": {
-    "@sparticuz/chromium": "^131.0.0"
+    "@sparticuz/chromium-min": "^131.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
