--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "puppeteer-core": "^21.5.0",
+    "puppeteer-core": "^21.5.0"
+  },
+  "optionalDependencies": {
     "@sparticuz/chromium": "^131.0.0"
   },
   "devDependencies": {
