--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "playwright-core": "^1.40.0"
+    "puppeteer-core": "^21.5.0",
+    "@sparticuz/chromium": "^110.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
