Switch to @sparticuz/chromium-min v131 for <30MB size

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "puppeteer-core": "^23.10.0",
-    "@sparticuz/chromium": "^131.0.1"
+    "@sparticuz/chromium-min": "^131.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
