--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "puppeteer-core": "^23.10.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "@sparticuz/chromium-min": "^131.0.1"
   },
   "devDependencies": {
